--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,7 +12,10 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-add_test(NAME TestSvcAgt COMMAND test_svcagt)
+add_test(NAME TestSvcAgt 
+ WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..
+ COMMAND ${CMAKE_CURRENT_BINARY_DIR}/test_svcagt
+)
 
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -g -fprofile-arcs -ftest-coverage -O0")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -W  -g -fprofile-arcs -ftest-coverage -O0")
